# ChessApp

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeCache.txt  CMakeLists.txt  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Move.cpp  Move.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Pin.h  Player.cpp  Player.h  Position.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  Square.cpp  Square.h  UI.h
include/: Game.h  TwoPlayers.h  UI.h
include/core/: Bishop.h  Board.h  King.h  Knight.h  Move.h  Pawn.h  Piece.h  Pin.h  Player.h  Position.h  Queen.h  Square.h
libs/flac-build/: CTestTestfile.cmake  FLACTargets.cmake  Makefile  cmake_install.cmake
libs/flac-build/microbench/: CTestTestfile.cmake  (+2 more)
libs/flac-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libs/freetype-build/: Makefile  cmake_install.cmake  freetype2.pc
libs/freetype-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libs/ogg-build/: Makefile  OggTargets.cmake  cmake_install.cmake  ogg.pc
libs/ogg-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libs/sfml-build/: Makefile  cmake_install.cmake
libs/sfml-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libs/vorbis-build/: Makefile  cmake_install.cmake  vorbis.pc  vorbisenc.pc  vorbisfile.pc
libs/vorbis-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: Game.cpp  main.cpp
src/core/: Bishop.cpp  Board.cpp  King.cpp  Knight.cpp  Move.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Queen.cpp  Rook.cpp  Rook.h  Square.cpp
(+51 files in other folders)
